@@ -7,7 +7,6 @@ import java.net.URLDecoder;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,6 +21,8 @@ import kernel.jdon.jobcategory.repository.JobCategoryRepository;
 import kernel.jdon.member.domain.Member;
 import kernel.jdon.member.domain.MemberRole;
 import kernel.jdon.member.domain.SocialProviderType;
+import kernel.jdon.member.dto.request.UpdateMemberRequest;
+import kernel.jdon.member.dto.response.UpdateMemberResponse;
 import kernel.jdon.member.dto.response.FindMemberResponse;
 import kernel.jdon.member.repository.MemberRepository;
 import kernel.jdon.memberskill.domain.MemberSkill;
@@ -49,6 +50,30 @@ public class MemberService {
 	}
 
 	@Transactional
+	public UpdateMemberResponse update(Long userId, UpdateMemberRequest updateMemberRequest) {
+		Member findMember = findMember(userId);
+		isUserEmail(updateMemberRequest.getEmail(), findMember.getEmail());
+
+		JobCategory findJobCategory = findJobCategory(updateMemberRequest.getJobCategoryId());
+		Member updateMember = updateMemberRequest.toUpdateEntity(findJobCategory);
+		List<Skill> findSkillList = findSkillList(updateMemberRequest.getSkillList());
+		List<MemberSkill> memberSkillList = getMemberSkillList(findSkillList, findMember);
+
+		return UpdateMemberResponse.of(findMember.update(updateMember, memberSkillList));
+	}
+
+	private Member findMember(Long id) {
+		return memberRepository.findById(id)
+			.orElseThrow(() -> new ApiException(MemberErrorCode.NOT_FOUND_MEMBER));
+	}
+
+	private void isUserEmail(String requestEmail, String sessionUserEmail) {
+		if (!requestEmail.equals(sessionUserEmail)) {
+			throw new ApiException(MemberErrorCode.FORBIDDEN_NOT_MATCH_EMAIL);
+		}
+	}
+
+	@Transactional
 	public Long register(RegisterRequest registerRequest) {
 		String emailAndProvider = getEmailAndProviderString(registerRequest.getHmac(), registerRequest.getEncrypted());
 		Map<String, String> userInfo = parseQueryString(emailAndProvider);
@@ -67,16 +92,24 @@ public class MemberService {
 	}
 
 	private void saveMemberSkillList(List<Long> skillIdList, Member member) {
-		List<Skill> findSkillList = skillIdList.stream()
+		List<Skill> findSkillList = findSkillList(skillIdList);
+		List<MemberSkill> memberSkillList = getMemberSkillList(findSkillList, member);
+		memberSkillRepository.saveAll(memberSkillList);
+	}
+
+	private List<Skill> findSkillList(List<Long> skillIdList) {
+		return skillIdList.stream()
 			.map(skillId -> skillRepository.findById(skillId)
 				.orElseThrow(() -> new ApiException(MemberErrorCode.NOT_FOUND_SKILL))).toList();
-		List<MemberSkill> memberSkillList = findSkillList.stream()
+	}
+
+	private List<MemberSkill> getMemberSkillList(List<Skill> skillList, Member member) {
+		return skillList.stream()
 			.map(skill -> MemberSkill.builder()
 				.member(member)
 				.skill(skill)
 				.build())
-			.collect(Collectors.toList());
-		memberSkillRepository.saveAll(memberSkillList);
+			.toList();
 	}
 
 	private JobCategory findJobCategory(Long jobCategoryId) {
